--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <main class="box">
-        <div>
+    <main class="flex">
+        <div class="flex__item">
 
         </div>
     </main>
