creating an html skeleton

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 <body>
     <main class="flex">
         <div class="flex__item">
-
+            <h1>Imię nazwisko</h1>
+            <h3>
+                frontend developer
+            </h3>
+                <div><img src="avatar.png" alt=""></div>
+            <section>
+                Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium
+                (na razie tylko z
+                Lego), prelegent i szkoleniowiec. <br> Uwielbia eksperymentować z nowymi technologiami, w swojej
+                twórczości
+                ocierając się o
+                sztukę.
+            </section>
+            <footer>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</footer>
         </div>
     </main>
 
