add css class flex__item--image flex__item--link flex__item--color

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
             <h3>
                 frontend developer
             </h3>
-                <div><img src="avatar.png" alt=""></div>
+            <div class="flex__item--image"><img src="avatar.png" alt=""></div>
             <section>
-                Programista z kilkunastoletnim doświadczeniem, fotograf, operator drona, właściciel Sokoła Millennium
+                Programista z <strong class="flex__item--color" >kilkunastoletnim doświadczeniem</strong> , fotograf, operator drona, właściciel
+                Sokoła Millennium
                 (na razie tylko z
-                Lego), prelegent i szkoleniowiec. <br> Uwielbia eksperymentować z nowymi technologiami, w swojej
+                Lego), <strong class="flex__item--color">prelegent i szkoleniowiec</strong>. <br> Uwielbia eksperymentować z nowymi technologiami,
+                w swojej
                 twórczości
                 ocierając się o
                 sztukę.
             </section>
-            <footer>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</footer>
+            <footer>W sieci: <a class="flex__item--link" href="#">Facebook</a>, <a class="flex__item--link"
+                    href="#">GitHub</a>, <a class="flex__item--link" href="#">Instagram</a>.</footer>
         </div>
     </main>
 
