add margin and new color header

--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 <body>
     <main class="flex">
         <div class="flex__item">
-            <h1>Imię nazwisko</h1>
-            <h3>
+            <div class="flex__item--image"><img src="avatar.png" alt=""></div>
+            <h1 >Imię nazwisko</h1>
+            <h3 class="flex__item--header ">
                 frontend developer
             </h3>
-            <div class="flex__item--image"><img src="avatar.png" alt=""></div>
+
             <section>
-                Programista z <strong class="flex__item--color" >kilkunastoletnim doświadczeniem</strong> , fotograf, operator drona, właściciel
+                Programista z <strong class="flex__item--color">kilkunastoletnim doświadczeniem</strong> , fotograf,
+                operator drona, właściciel
                 Sokoła Millennium
                 (na razie tylko z
-                Lego), <strong class="flex__item--color">prelegent i szkoleniowiec</strong>. <br> Uwielbia eksperymentować z nowymi technologiami,
+                Lego), <strong class="flex__item--color">prelegent i szkoleniowiec</strong>. <br> Uwielbia
+                eksperymentować z nowymi technologiami,
                 w swojej
                 twórczości
                 ocierając się o
