add flexbox in content style

--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
     <main class="flex">
         <div class="flex__item">
             <div class="flex__item--image"><img src="avatar.png" alt=""></div>
-            <h1 >Imię nazwisko</h1>
-            <h3 class="flex__item--header ">
-                frontend developer
-            </h3>
+            <div class="flex__item--content">
+                <h1>Imię nazwisko</h1>
+                <p class="flex__item--header ">
+                    frontend developer
+                </p>
 
-            <section>
-                Programista z <strong class="flex__item--color">kilkunastoletnim doświadczeniem</strong> , fotograf,
-                operator drona, właściciel
-                Sokoła Millennium
-                (na razie tylko z
-                Lego), <strong class="flex__item--color">prelegent i szkoleniowiec</strong>. <br> Uwielbia
-                eksperymentować z nowymi technologiami,
-                w swojej
-                twórczości
-                ocierając się o
-                sztukę.
-            </section>
-            <footer>W sieci: <a class="flex__item--link" href="#">Facebook</a>, <a class="flex__item--link"
-                    href="#">GitHub</a>, <a class="flex__item--link" href="#">Instagram</a>.</footer>
+                <section class="flex__item--coment">
+                    Programista z <strong class="flex__item--color">kilkunastoletnim doświadczeniem</strong> , fotograf,
+                    operator drona, właściciel
+                    Sokoła Millennium
+                    (na razie tylko z
+                    Lego), <strong class="flex__item--color">prelegent i szkoleniowiec</strong>. <br> Uwielbia
+                    eksperymentować z nowymi technologiami,
+                    w swojej
+                    twórczości
+                    ocierając się o
+                    sztukę.
+                </section>
+                <footer>W sieci: <a class="flex__item--link" href="#">Facebook</a>, <a class="flex__item--link"
+                        href="#">GitHub</a>, <a class="flex__item--link" href="#">Instagram</a>.</footer>
+            </div>
+
         </div>
     </main>
 
