--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="flex__item">
             <div class="flex__item--image"><img src="avatar.png" alt=""></div>
             <div class="flex__item--content">
-                <h1>Imię nazwisko</h1>
+                <h1 class="flex__item--header--first ">Imię nazwisko</h1>
                 <p class="flex__item--header ">
                     frontend developer
                 </p>
@@ -32,8 +32,12 @@
                     ocierając się o
                     sztukę.
                 </section>
-                <footer>W sieci: <a class="flex__item--link" href="#">Facebook</a>, <a class="flex__item--link"
-                        href="#">GitHub</a>, <a class="flex__item--link" href="#">Instagram</a>.</footer>
+                <footer>
+                    <section class="flex__item--footer">W sieci: <a class="flex__item--link"
+                            href="#">Facebook</a>, <a class="flex__item--link" href="#">GitHub</a>, <a
+                            class="flex__item--link" href="#">Instagram</a>.
+                    </section>
+                </footer>
             </div>
 
         </div>
